<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_header_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/setting_user_photo"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:src="@drawable/defface"
            android:layout_marginStart="@dimen/horizontal_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/setting_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/settings_default_username"
            android:textSize="@dimen/smallText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/setting_user_photo"
            app:layout_constraintTop_toTopOf="@id/setting_user_photo"
            android:layout_marginStart="@dimen/horizontal_margin"

        />

        <TextView
            android:id="@+id/settings_user_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccentDark"
            android:text="@string/settings_default_status"
            android:textSize="@dimen/smallText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/setting_user_photo"
            app:layout_constraintTop_toBottomOf="@id/setting_user_name"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
    android:id="@+id/settings_text_account"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/colorPrimary"
    android:text="@string/settings_text_account"
    app:layout_constraintTop_toBottomOf="@id/setting_header_block"
    android:layout_marginStart="@dimen/horizontal_margin"
    android:layout_marginTop="@dimen/vertical_large_margin"
    android:textSize="@dimen/normalText"
    android:textStyle="bold"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account"
        style="@style/settingsButtons"
       >
        <TextView
            android:id="@+id/settings_phone_number"
            android:text="@string/settings_default_number"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settings_label_phone_number"
            android:text="@string/settings_label_phone_number"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number"
            style="@style/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone"
        style="@style/settingsButtons">
        <TextView
            android:id="@+id/settings_login"
            android:text="@string/settings_default_login"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_login"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settings_label_login"
            android:text="@string/settings_label_login"
            app:layout_constraintTop_toBottomOf="@id/settings_login"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_login"
            style="@style/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_login"
        style="@style/settingsButtons">
        <TextView
            android:id="@+id/settings_bio"
            android:text="@string/settings_default_bio"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settings_label_bio"
            android:text="@string/settings_label_bio"
            app:layout_constraintTop_toBottomOf="@id/settings_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_bio"
            style="@style/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_change_photo"
        android:layout_width="@dimen/settings_user_photo_width"
        android:layout_height="@dimen/settings_user_photo_height"
        android:src="@drawable/ic_camera"
        android:layout_marginLeft="@dimen/horizontal_margin"
        app:civ_border_color="@color/colorGrey"
        app:civ_circle_background_color="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/settings_text_account"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>